Fixed alignment issues on individual project page

--- a/website/static/website/css/indproject.css
+++ b/website/static/website/css/indproject.css
@@ -1,3 +1,12 @@
+.row-adjust-margins {
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.people-col {
+    padding-left: 0;
+}
+
 .info-title {
     margin-left: 0px;
 }
@@ -33,6 +42,10 @@
 
 .no-margin {
     padding: 0px;
+}
+
+.people-col {
+    padding-left: 0px;
 }
 
 .publication-template {
